# scaling-parakeet

./: .gitignore  ARCHITECTURE.md  BRAINSTORM.md  CODE_OF_CONDUCT.md  COMMUNITY_FRAMEWORK.md  CONTINUOUS_PERFECTION_CYCLE.md  CONTRIBUTING.md  MAINTENANCE.md  README.md  ROADMAP.md  check_env.py  gemini.md  install_dependencies.sh  package-lock.json  pyproject.toml  requirements.txt  run_test.py  security_policy.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  osv-scanner.yml  security.yml
.tmp_metadata/: METADATA
ctf/reverse_engineering/: README.md  challenge.py
env/: pyvenv.cfg
src/: gamification.py  main.py  tool_manager.py  workflow_engine.py
src/ai/: prompt_engine.py
src/bughunter_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/plugins/: __init__.py  core.py  gemini_ai.py  vulnerability_detection.py
src/tools/: __init__.py  config.py  dirsearch.py  forecast.py  learn.py  map.py  nikto.py  nmap.py  nuclei.py  port_scanner.py  pullpush.py  refactor.py  sqlmap.py  subdomain_scanner.py  waybackurls.py
src/ui/: interactive.py
src/utils/: ai_utils.py  cache_utils.py  formatters.py  policy_manager.py  security.py  shell.py  tool_registration.py
tests/: benchmark.py  test_ai.py  test_cli.py  test_security.py
user_dashboard/: handlers.py
wiki/: AI-and-VibeOps.md  Command-Reference.md  Embedded-Systems-Security.md  Getting-Started.md  Home.md  Web-Engineering.md
