[project]
name = "bughunter-cli"
version = "0.2.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A CLI tool for bug hunting and development tasks."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [

    "click==8.1.8",
    "PyGithub==2.6.1",

    "click==8.1.8",
    "PyGithub==2.6.1",

]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/akabarki76/bughunter-cli"
"Bug Tracker" = "https://github.com/akabarki76/bughunter-cli/issues"

[project.scripts]
bughunter = "src.main:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]

[tool.setuptools.packages.find]
where = ["src"]
